# loaner

./: .travis.yml  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  README.md  WORKSPACE  angular_tests.sh  backend_tests.sh
loaner/web_app/frontend/src/: BUILD.bazel  app.config.ts  app.html  app.module.ts  app.routing.ts  app.scss  app.ts  app_test.ts  index.html  main.aot.ts  rxjs_shims.js
loaner/web_app/frontend/src/assets/: search_help.md
loaner/web_app/frontend/src/components/audit_table/: audit_table.html  audit_table.ng.html  audit_table.scss  audit_table.ts  audit_table_test.ts  index.ts
loaner/web_app/frontend/src/components/authorization/: authorization.html  authorization.scss  authorization.ts  index.ts
loaner/web_app/frontend/src/components/bootstrap/: bootstrap.html  bootstrap.ng.html  bootstrap.scss  bootstrap.ts  bootstrap_test.ts  index.ts
loaner/web_app/frontend/src/components/configuration/: configuration.html  configuration.ng.html  configuration.scss  configuration.ts  configuration_test.ts  index.ts
loaner/web_app/frontend/src/components/device_action_box/: device_action_box.html  device_action_box.ng.html  device_action_box.scss  device_action_box.ts  device_action_box_test.ts  index.ts
loaner/web_app/frontend/src/components/device_actions_menu/: device_actions_menu.html  device_actions_menu.ng.html  device_actions_menu.ts  device_actions_menu_test.ts  index.ts
loaner/web_app/frontend/src/components/device_buttons/: device_buttons.html  device_buttons.scss  device_buttons.ts  index.ts
loaner/web_app/frontend/src/components/device_details/: device_details.html  device_details.ng.html  device_details.scss  device_details.ts  device_details_test.ts  index.ts
loaner/web_app/frontend/src/components/device_enroll_unenroll_list/: device_enroll_unenroll_list.html  device_enroll_unenroll_list.scss  device_enroll_unenroll_list.ts  device_enroll_unenroll_list_test.ts  index.ts
loaner/web_app/frontend/src/components/device_header/: device_header.html  device_header.ts  device_header_test.ts  index.ts
loaner/web_app/frontend/src/components/device_info_card/: device_info_card.html  device_info_card.ng.html  device_info_card.scss  device_info_card.ts  device_info_card_test.ts  index.ts
loaner/web_app/frontend/src/components/device_list_table/: device_data.ts  device_data_source.ts  device_list_table.html  device_list_table.ng.html  device_list_table.scss  device_list_table.ts  device_list_table_test.ts  index.ts
loaner/web_app/frontend/src/components/email_template/: email_template.ng.html  email_template.scss  email_template.ts  email_template_test.ts  index.ts
loaner/web_app/frontend/src/components/return_dialog/: index.ts  return_dialog.ng.html  return_dialog.ts  return_dialog_test.ts
loaner/web_app/frontend/src/components/role_editor_table/: index.ts  role_editor_table.ng.html  role_editor_table.scss  role_editor_table.ts  role_editor_table_test.ts
loaner/web_app/frontend/src/components/search_box/: index.ts  search_box.html  search_box.scss  search_box.service.ts  search_box.ts  search_box_helper.html  search_box_helper.ng.html  search_box_test.ts
loaner/web_app/frontend/src/components/search_results/: index.ts  search_results.html  search_results.ng.html  search_results.ts  search_results_test.ts
loaner/web_app/frontend/src/components/shelf_actions/: index.ts  shelf_actions.html  shelf_actions.ng.html  shelf_actions.scss  shelf_actions.ts  shelf_actions_test.ts
loaner/web_app/frontend/src/components/shelf_buttons/: index.ts  shelf_buttons.ng.html  shelf_buttons.ts  shelf_buttons_test.ts
loaner/web_app/frontend/src/components/shelf_details/: index.ts  shelf_details.html  shelf_details.ng.html  shelf_details.scss  shelf_details.ts  shelf_details_test.ts
loaner/web_app/frontend/src/components/shelf_list_table/: index.ts  shelf_data.ts  shelf_data_source.ts  shelf_list_table.html  shelf_list_table.ng.html  shelf_list_table.scss  shelf_list_table.ts  shelf_list_table_test.ts
loaner/web_app/frontend/src/components/tag_list_table/: index.ts  tag_list_table.ng.html  tag_list_table.scss  tag_list_table.ts  tag_list_table_test.ts
loaner/web_app/frontend/src/components/user_loans_table/: index.ts  user_loans_data.ts  user_loans_data_source.ts  user_loans_table.html  user_loans_table.scss  user_loans_table.ts  user_loans_table_test.ts
loaner/web_app/frontend/src/components/viewonly_label/: index.ts  viewonly_label.html  viewonly_label.scss  viewonly_label.ts  viewonly_label_test.ts
loaner/web_app/frontend/src/core/: material_module.ts
loaner/web_app/frontend/src/models/: bootstrap.ts  config.ts  device.ts  device_test.ts  role.ts  shelf.ts  tag.ts  template.ts  user.ts  user_test.ts
loaner/web_app/frontend/src/scss_mixins/: configuration-shared.scss  loaner-buttons-container.scss  loaner-table.scss
loaner/web_app/frontend/src/services/: api.ts  auth.ts  auth_guard.ts  auth_guard_test.ts  bootstrap.ts  can_deactivate_guard.ts  config.ts  device.ts  oauth_interceptor.ts  role.ts  search.ts  shelf.ts  snackbar.ts  tag.ts  template.ts  user.ts
loaner/web_app/frontend/src/services/dialog/: confirm_dialog.html  confirm_dialog.ng.html  confirm_dialog.scss  confirm_dialog.ts  dialog.ts  dialog_test.ts  index.ts
loaner/web_app/frontend/src/testing/: mocks.ts
loaner/web_app/frontend/src/views/audit_view/: audit_view.html  audit_view.ts  audit_view_test.ts  index.ts
loaner/web_app/frontend/src/views/bootstrap_view/: bootstrap_view.ng.html  bootstrap_view.ts  bootstrap_view_test.ts  index.ts
loaner/web_app/frontend/src/views/configuration_view/: configuration_view.html  configuration_view.ts  configuration_view_test.ts  index.ts
loaner/web_app/frontend/src/views/device_actions_view/: device_actions_view.ng.html  device_actions_view.ts  device_actions_view_test.ts  index.ts
loaner/web_app/frontend/src/views/device_detail_view/: device_detail_view.ng.html  device_detail_view.ts  device_detail_view_test.ts  index.ts
loaner/web_app/frontend/src/views/device_list_view/: device_list_view.html  device_list_view.ng.html  index.ts  (+2 more)
(+503 files in other folders)
